welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:2: error: not found: type !=
while (!getColorSol():Color!=Color.green)
                           ^Balin:2: error: not found: value getColorSol
while (!getColorSol():Color!=Color.green)
        ^