welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
while (!getColorSol():Color!=Color.green)
	while (!estSurBiscuit() && estDosMur())
		{recule()}
	if (estDosMur())
	{gauche()
	avance()
	gauche()
	avance()
	}
	else{prendBiscuit}
	while (estSurBiscuit==false)
		{avance()}
	recule()
	poseBiscuit()